--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.5.21'
+    id 'org.jetbrains.kotlin.jvm' version '1.5.30'
+    id "org.jetbrains.kotlin.plugin.serialization" version "1.5.30"
 }
 
 group 'CoroutineRecipes'
@@ -8,13 +9,18 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-    jcenter()
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.30"
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1-native-mt"
+    api "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
+
+    implementation "io.ktor:ktor-client-java:1.6.3"
+    implementation "io.ktor:ktor-client-serialization:1.6.3"
+    implementation "io.ktor:ktor-client-logging:1.6.3"
+
     testCompile group: 'junit', name: 'junit', version: '4.13.2'
 }
 
