--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.5.30'
-    id "org.jetbrains.kotlin.plugin.serialization" version "1.5.30"
+    id 'org.jetbrains.kotlin.jvm' version '1.6.21'
+    id "org.jetbrains.kotlin.plugin.serialization" version "1.6.21"
 }
 
 group 'CoroutineRecipes'
@@ -12,10 +12,10 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.30"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.21"
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1-native-mt"
-    api "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1-native-mt"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 
     implementation "io.ktor:ktor-client-java:1.6.3"
     implementation "io.ktor:ktor-client-serialization:1.6.3"
