--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.6.21'
-    id "org.jetbrains.kotlin.plugin.serialization" version "1.6.21"
+    id 'org.jetbrains.kotlin.jvm' version '1.7.10'
+    id "org.jetbrains.kotlin.plugin.serialization" version "1.7.10"
 }
 
 group 'CoroutineRecipes'
@@ -12,27 +12,27 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.21"
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1-native-mt"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0-RC"
 
-    implementation "io.ktor:ktor-client-java:1.6.3"
-    implementation "io.ktor:ktor-client-serialization:1.6.3"
-    implementation "io.ktor:ktor-client-logging:1.6.3"
-
-    testCompile group: 'junit', name: 'junit', version: '4.13.2'
+    implementation "io.ktor:ktor-client-java:2.0.3"
+    implementation "io.ktor:ktor-serialization-gson:2.0.3"
+    implementation "io.ktor:ktor-client-content-negotiation:2.0.3"
+    implementation "io.ktor:ktor-client-logging:2.0.3"
+    testImplementation "junit:junit:4.13.2"
 }
 
 compileKotlin {
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_1_8
         freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
     }
 }
 compileTestKotlin {
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_1_8
         freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
     }
 }
